--- a/angular-14-client/src/app/views/index/index.component.html
+++ b/angular-14-client/src/app/views/index/index.component.html
@@ -257,29 +257,15 @@
 </head>
 <body>
 <div class="container" id="container">
-  <div class="form-container sign-up-container">
-    <form action="#">
-      <h1>Create Account</h1>
-      <div class="social-container">
-        <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-        <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <span>or use your email for registration</span>
-      <input type="text" placeholder="Name" />
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <button>Sign Up</button>
-    </form>
-  </div>
   <div class="form-container sign-in-container">
-    <form action="#">
-      <h1>Sign in</h1>
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <a href="#">Forgot your password?</a>
-      <button>Sign In</button>
-    </form>
+      <form>
+        <h1>Login</h1>
+        <input type="email" placeholder="Email" />
+        <input type="password" placeholder="Password" />
+        <a href="#">Forgot your password?</a>
+        <button>Login</button>
+      </form>
+
   </div>
   <div class="overlay-container">
     <div class="overlay">
@@ -291,7 +277,9 @@
       <div class="overlay-panel overlay-right">
         <h1>Don't have an account</h1>
         <p>Enter your personal details and start journey with us</p>
+        <a [routerLink]="['/register']">
         <button class="ghost" id="signUp">Sign Up</button>
+        </a>
       </div>
     </div>
   </div>
