add: confirmation page (when registering)

--- a/angular-14-client/src/app/views/auth/register/register.component.html
+++ b/angular-14-client/src/app/views/auth/register/register.component.html
@@ -157,7 +157,9 @@
     </div>
     <hr>
     <div class="btn-block">
+      <a [routerLink]="['/success']">
       <button type="submit" href="/">Submit</button>
+      </a>
     </div>
   </form>
 </div>
