add: frontend linked with backend for stations

--- a/angular-14-client/src/app/views/index/index.component.html
+++ b/angular-14-client/src/app/views/index/index.component.html
@@ -297,7 +297,7 @@
     <h4>User logged in successfully!</h4>
 
     <div class="overlay-panel overlay-left">
-      <a [routerLink]="['/tutorials']">
+      <a [routerLink]="['/stations']">
         <button class="ghost">Stations</button>
       </a>
     </div>
