--- a/angular-14-client/src/app/app.component.html
+++ b/angular-14-client/src/app/app.component.html
@@ -3,7 +3,7 @@
     <a href="#" class="navbar-brand">Trip Scheduling</a>
     <div class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a routerLink="tutorials" class="nav-link">Tutorials</a>
+        <a routerLink="stations" class="nav-link">Stations</a>
       </li>
       <li class="nav-item">
         <a routerLink="add" class="nav-link">Add</a>
