add(frontend): add trip and add station only when admin is loggedin

--- a/angular-14-client/src/app/components/station/station-list/station-list.component.html
+++ b/angular-14-client/src/app/components/station/station-list/station-list.component.html
@@ -10,7 +10,7 @@
       <div class="input-group-append">
         <button
           class="btn btn-outline-secondary"
-          (click)="searchId()"
+          (click)="searchID()"
         >
           Search
         </button>
