--- a/angular-14-client/src/app/app.component.html
+++ b/angular-14-client/src/app/app.component.html
@@ -5,8 +5,24 @@
       <li class="nav-item">
         <a routerLink="stations" class="nav-link">Stations</a>
       </li>
+
+      <li class="nav-item" >
+        <div *ngIf="adminLoggedIn">
+          <a routerLink="add/station" class="nav-link" >Add - Station</a>
+        </div>
+
+      </li>
+
       <li class="nav-item">
-        <a routerLink="add" class="nav-link">Add</a>
+        <a routerLink="trips" class="nav-link">Trips</a>
+      </li>
+
+
+      <li class="nav-item" >
+        <div *ngIf="adminLoggedIn">
+          <a routerLink="add/trip" class="nav-link" >Add - Trips</a>
+        </div>
+
       </li>
     </div>
   </nav>
