--- a/angular-14-client/src/app/components/trip/add-trip/add-trip.component.html
+++ b/angular-14-client/src/app/components/trip/add-trip/add-trip.component.html
@@ -1,27 +1,23 @@
 <div>
   <div class="submit-form">
     <div *ngIf="!submitted">
+
       <div class="form-group">
-        <label for="from_station">From Station</label>
-        <input
-          type="text"
-          class="form-control"
-          id="from_station"
-          required
-          [(ngModel)]="trip.from_station"
-          name="from_station"
-        />
+        <label>From Station</label><br>
+          <select class="form-select" aria-label="Default select example" [(ngModel)]="trip.from_station.id">
+            <option *ngFor="let station of stations" [value]="station.id" >
+              {{station.name}}
+            </option>
+          </select>
       </div>
 
       <div class="form-group">
-        <label for="to_station">To Station</label>
-        <input
-          class="form-control"
-          id="to_station"
-          required
-          [(ngModel)]="trip.to_station"
-          name="to_station"
-        />
+        <label>To Station</label><br>
+        <select class="form-select" aria-label="Default select example" [(ngModel)]="trip.to_station.id">
+          <option *ngFor="let station of stations" [value]="station.id">
+            {{station.name}}
+          </option>
+        </select>
       </div>
 
       <div class="form-group">
