add trip list and trip details

--- a/angular-14-client/src/app/views/index/index.component.html
+++ b/angular-14-client/src/app/views/index/index.component.html
@@ -302,7 +302,7 @@
       </a>
     </div>
     <div class="overlay-panel overlay-right">
-      <a [routerLink]="['/tutorials']">
+      <a [routerLink]="['/trips']">
         <button class="ghost">Trips</button>
       </a>
     </div>
