--- a/angular-14-client/src/app/components/station/station-list/station-list.component.html
+++ b/angular-14-client/src/app/components/station/station-list/station-list.component.html
@@ -18,21 +18,45 @@
     </div>
   </div>
   <div class="col-md-6">
-    <h4>Stations List</h4>
-    <ul class="list-group">
-      <li
-        class="list-group-item"
-        *ngFor="let station of stations; let i = index"
-        [class.active]="i == currentIndex"
-        (click)="setActiveStation(station, i)"
-      >
-        {{ station.name }}
-      </li>
-    </ul>
 
-    <button class="m-3 btn btn-sm btn-danger" (click)="removeAllStations()">
-      Remove All
-    </button>
+      <div *ngIf="!search && searchResult!='-1'">
+        <h4>Stations List</h4>
+        <ul class="list-group">
+        <li
+          class="list-group-item"
+          *ngFor="let station of stations; let i = index"
+          [class.active]="i == currentIndex"
+          (click)="setActiveStation(station, i)"
+        >
+          {{ station.name }}
+        </li>
+        </ul>
+      </div>
+
+      <div *ngIf="search">
+        <h4>Result</h4>
+        <ul class="list-group">
+        <li
+          class="list-group-item"
+          [class.active]="searchResult.id == currentIndex"
+          (click)="setActiveStation(searchResult, searchResult.id)"
+        >
+          {{ searchResult.name }}
+        </li>
+          </ul>
+      </div>
+
+
+    <div *ngIf="!search && searchResult!='-1'">
+      <button class="m-3 btn btn-sm btn-danger" (click)="removeAllStations()">
+        Remove All
+      </button>
+    </div>
+
+    <div *ngIf="searchResult=='-1'">
+      <h4>No results found</h4>
+    </div>
+
   </div>
   <div class="col-md-6">
     <app-station-details
